# Skills-benchmark

skill-economy-benchmark/: .gitignore  README.md  README_CN.md  README_EN.md  api_test.py  pyproject.toml  requirements.txt
skill-economy-benchmark/data/: 0414inner_skill_registry.md  0414innerskill_advise.md  0420out_skill.md  0421_09code.md  external_corpus_chunks.jsonl  external_hits.raw.json  external_queries.json  external_ranked_chunks_manifest.json  external_skill_corpus.json  external_source_docs.json  external_source_hits.json  finalized_external_skills_manifest.json  generated_external_skills_manifest.json  schema_ontology_v2.json  skill_registry.json  skill_registry.md  skill_registry.raw.json  skill_registry.review.json  skill_registry.template.json  source_policy.json  task_schema_manifest.json
skill-economy-benchmark/dataset/: dataset_index.json
skill-economy-benchmark/docs/: experiment_protocol.md  metrics_definition.md  research_proposal.md  run_manifest_template.md  skill_pool_protocol.md  skillbench_overview_and_our_contribution.md  task_list.md
skill-economy-benchmark/external_cache/: manifest.json
skill-economy-benchmark/results/: compare_withskills_vs_noskills_oracle_20260416-205128.json  compare_withskills_vs_noskills_oracle_20260421-142406.json  dataset_evaluation_report.json  evaluation_report.json  real_evaluation_report_noskills-oracle-20260416-205104.json  real_evaluation_report_noskills-oracle-20260421-142343.json  real_evaluation_report_withskills-oracle-20260416-204645.json  real_traces_noskills-oracle-20260416-205104.json  (+5 more)
(+127 files in other folders)
