[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-economy-benchmark"
version = "0.1.0"
description = "Agent Skill Benchmark 2.0 - Economy & Effectiveness Evaluation Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Qinghua Xing"},
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
